# ttm-playground

./: CLAUDE.md  README.md  pyproject.toml  requirements.txt
docs/plans/: 2026-04-15-streamlit-norwegian-ui-design.md  2026-04-15-streamlit-norwegian-ui.md
streamlit_app/: __init__.py  app.py  forms.py  plots.py  presets.py
streamlit_app/tabs/: basic.py  calibration_aging.py  cooling_switch.py  three_winding.py
tests/streamlit_app/: test_presets.py
